# hercules

./: .gitignore  .golangci.toml  .travis.yml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PLAN.md  PLUGINS.md  README.md  ROADMAP.md  action.yml  core.go  doc.go  go.mod  go.sum  justfile  treefmt.toml
.github/workflows/: main.yml  test-format.yaml  test-lint.yaml  test-unit.yaml
cmd/hercules/: combine.go  generate_plugin.go  plugin.template  preset.go  preset_test.go  report.go  report_tensorflow_stub_test.go  report_test.go  root.go  root_test.go  tensorflow_capability.go  tensorflow_capability_stub.go
contrib/_plugin_example/: churn_analysis.go  justfile
doc/: HIBERNATION.md  PIPELINE_ITEMS.md
docs/: SCHEMAS.md  dag.dot
docs/plans/: 2026-02-13-onboarding-ramp-design.md  2026-02-14-refactoring-proxy-design.md  2026-02-14-refactoring-proxy-implementation.md  2026-02-15-large-repo-scaling-design.md  (+1 more)
internal/: dummies.go  global_test.go
leaves/: burndown.go  burndown_legacy.go  burndown_legacy_test.go  burndown_shared.go  burndown_test.go  bus_factor.go  bus_factor_test.go  codechurn.go  codechurn_test.go  comment_sentiment.go  comment_sentiment_stub.go  comment_sentiment_stub_test.go  comment_sentiment_test.go  comment_sentiment_treesitter.go  commits.go  commits_test.go  couples.go  couples_test.go  devs.go  devs_test.go  file_history.go  file_history_test.go  hotspot_risk.go  imports_printer.go  imports_printer_test.go  knowledge_diffusion.go  knowledge_diffusion_test.go  linedump.go  onboarding.go  onboarding_test.go  ownership_concentration.go  ownership_concentration_test.go  refactoring_proxy.go  refactoring_proxy_test.go  shotness.go  shotness_babelfish.go  shotness_test.go  shotness_treesitter_test.go  temporal_activity.go  temporal_activity_test.go  (+2 more)
python/: pyproject.toml  setup.py
python/labours/: cli.py  embeddings.py  pb_pb2.py  plotting.py  readers.py
python/labours/modes/: burndown.py  bus_factor.py  devs.py  devs_parallel.py  hotspot_risk.py  knowledge_diffusion.py  languages.py  old_vs_new.py  ownership_concentration.py  refactoring_proxy.py  sentiment.py  temporal_activity.py
(+62 files in other folders)
