[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labours"
version = "10.7.3"
description = "Python companion for github.com/src-d/hercules to visualize the results."
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Cyrax Red" }
]
keywords = ["git", "mloncode", "mining software repositories", "hercules"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.0,<4.0",
    "numpy>=1.20.0,<2.0",
    "pandas>=2.0.0,<3.0",
    "PyYAML>=5.0,<7.0",
    "scipy>=1.7,<2.0",
    "protobuf>=4.23.3,<6.0",
    "munch>=2.0,<5.0",
    "hdbscan>=0.8.0,<1.0",
    "fastdtw>=0.3.2,<2.0",
    "python-dateutil>=2.6.0,<3.0",
    "lifelines>=0.27.0,<1.0",
    "tqdm>=4.3,<5.0",
    "formulaic>=0.6.0,<2.0",
]

[project.optional-dependencies]
seriate = [
    "seriate>=1.1.2",
]

[project.urls]
Homepage = "https://github.com/meko-christian/hercules"
Download = "https://github.com/meko-christian/hercules"

[project.scripts]
labours = "labours.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["labours"]

[tool.hatch.build.targets.sdist]
include = [
    "/labours",
    "/LICENSE.md",
    "/README.md",
]

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 99
exclude = ["labours/pb_pb2.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = [
    "B007",
    "F401",  # Spurious "unused import"
    "F811",  # Spurious "redefinition"
    "W503",  # Black formatting not PEP8 compliant
    "E203",  # Black formatting not PEP8 compliant
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
lines-between-types = 0
order-by-type = false
